--- a/src/Components/Introduction/Introduction.module.css
+++ b/src/Components/Introduction/Introduction.module.css
@@ -6,3 +6,20 @@
 .FadeInTransition {
   opacity: 1;
 }
+
+@keyframes fadeInTranslate {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fadeIn {
+  animation: fadeInTranslate 0.25s linear forwards;
+}
+
+.fadeInSlow {
+  animation: fadeInTranslate 0.75s linear forwards;
+  animation-delay: 0.75s;
+}
